@@ -23,6 +23,7 @@ use COD::CIF::ChangeLog qw( summarise_messages );
 use COD::CIF::Parser qw( parse_cif ) ;
 use COD::CIF::DDL qw( is_general_local_data_name );
 use COD::CIF::DDL::DDL1 qw( canonicalise_value
+                            get_category_name
                             get_data_type
                             get_enumeration_defaults
                             get_list_constraint_type );
@@ -745,12 +746,9 @@ sub get_item_to_category_mapping
     for my $dic_file_name (sort keys %{$dics}) {
         my $dic = $dics->{$dic_file_name};
         for my $tag (sort keys %{$dic}) {
-            if (exists $dic->{$tag}{'values'}{'_category'}) {
-                $item_to_category{$tag} = lc $dic->{$tag}{'values'}{'_category'}[0];
-            } else {
-                # FIXME: rewrite the message in a more appropriate way
-                warn "data item '$tag' does not have a category" . "\n";
-            }
+            my $category = get_category_name( $dic->{$tag} );
+            next if !defined $category;
+            $item_to_category{$tag} = lc $category;
         }
     }
 
