@@ -1,5 +1,3 @@
 Tests the way data items that reside in the same looped list, but belong to
 different categories are located and reported. Definitions of data items
 that share a category are defined in several dictionaries.
-
-FIXME: currently this test produces no validation issues even though it should.
