@@ -1,0 +1,1 @@
+--dictionaries tests/inputs/cif_validate/dic/ddl1/faulty/ddl1_faulty_undefined_category.dic
