@@ -1,0 +1,5 @@
+Tests the way data items that reside in the same looped list, but do not
+have an associated category are treated during the looped list category
+homogeneity check. both the unrecognised data items and the data items
+that do not contain the name of the parent category in their defitinitions
+should be silently skipped during this check.
