@@ -1,0 +1,8 @@
+data_looped_list_category_check
+loop_
+_proper_looped_list_item_with_category_name
+_unknown_looped_item
+_faulty_item_with_no_category
+'Value 1'
+'Value 2'
+'Value 3'
