@@ -1,0 +1,44 @@
+##############################################################################
+#                                                                            #
+#               DDL1 FAULTY UNDEFINED CATEGORY TEST DICTIONARY               #
+#               ----------------------------------------------               #
+#                                                                            #
+#  This dictionary should only be used for software testing purposes.        #
+##############################################################################
+
+data_on_this_dictionary
+_dictionary_name            ddl1_faulty_missing_category_test.dic
+_dictionary_version         1.0.0
+_dictionary_update          2020-02-03
+_dictionary_history
+;
+ 2020-02-03 Created the dictionary. A.V.
+;
+
+data_proper_looped_list_[]
+_name                      '_proper_looped_list_[]'
+_category                    category_overview
+_type                        null
+_definition
+;
+ A looped category that is intended to contain proper data item definitions.
+;
+
+data_proper_looped_list_item_with_category_name
+_name                      '_proper_looped_list_item_with_category_name'
+_category                    proper_looped_list
+_list                        yes
+_type                        char
+_definition
+;
+ A data item definition that properly provides the name of the parent category.
+;
+
+data_faulty_item_with_no_category
+_name                      '_faulty_item_with_no_category'
+_list                        yes
+_type                        char
+_definition
+;
+ A data item definition that does not provide the name of the parent category.
+;
