@@ -1,0 +1,1 @@
+scripts/cif_validate: tests/cases/cif_validate_033.inp data_looped_list_category_check: NOTE, definition of the '_unknown_looped_item' data item was not found in the provided dictionaries.
