@@ -4,6 +4,8 @@ cod-tools (unreleased)
     - cif_validate:
       - detection of looped lists that contains data items from more
         than one dictionary category.
+    - COD::CIF::DDL::DDL1:
+      - the get_category_name() subroutine.
   * Changed:
     - cifvalues:
       - updated the help message.
